--- a/assets/bundle.css
+++ b/assets/bundle.css
@@ -3287,7 +3287,7 @@ footer .bottom-info .info-wrap .text p {
   font-weight: 300;
   font-size: 18px;
   line-height: 1.56;
-  color: var(--dark);
+  /* color: var(--dark); */
 }
 
 .story-data .author .info p span {
