--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -96,6 +96,10 @@
     min-height: 50px;
   }
 
+  footer .bottom-info .info-wrap .text p {
+    color: white !important;
+  }
+
   .footer-column img.title {
     object-fit: contain;
     filter: invert(100%) sepia(0%) saturate(7488%) hue-rotate(327deg) brightness(102%) contrast(105%);
