--- a/snippets/features.liquid
+++ b/snippets/features.liquid
@@ -10,7 +10,7 @@
         
           <div class="intro-text">
             <div class="sub-title">
-              <h1>{{section.settings.fetr_titlone}}</h1>
+              <h1>Safe & Powerful <br>Glucose Support</h1>
               <p>{{section.settings.fter_descone}}</p>
             </div>
             <div class="btn">
