--- a/snippets/features.liquid
+++ b/snippets/features.liquid
@@ -11,10 +11,10 @@
           <div class="intro-text">
             <div class="sub-title">
               <h1>Safe & Powerful <br>Glucose Support</h1>
-              <p>{{section.settings.fter_descone}}</p>
+              <p>CuraLin is designed specifically for people looking for an effective and natural way to maintain healthy glucose levels so they can enjoy life’s events to the fullest.</p>
             </div>
             <div class="btn">
-              <a href="{{section.settings.fterbnr_btnlinkone}}" class="main-btn">{{section.settings.fterbtn_titlone}}</a>
+              <a href="/pages/curalin-advanced-glucose-support" class="main-btn">learn more</a>
             </div>
           </div>
         </div>
@@ -134,161 +134,7 @@
     });
   </script>
   
-  {% schema %}
-  {
-    "name": "Home Features",
-    "settings": [
-      {
-           "type": "header", 
-           "content": "Glucose Support Section Start" 
-      }, 
-      {
-          "type": "image_picker",
-          "id": "fetr_imgone",
-          "label": "Select image"
-        },
-      {
-        "type": "text",
-        "id": "fetr_titlone",
-        "label": "Title",
-        "default": "Enter Yor title"
-       },
-       {
-        "type": "textarea",
-        "id": "fter_descone",
-        "label": "Description",
-        "default": "Enter Description"
-       },
-       {
-        "type": "text",
-        "id": "fterbtn_titlone",
-        "label": "Button Title",
-        "default": "Enter Button Title"
-       },
-       {
-          "id": "fterbnr_btnlinkone",
-          "type": "url",
-          "label": "Button Link"
-        },
-        {
-           "type": "header", 
-           "content": "Powerful natural ingredients Section Start" 
-      }, 
-      {
-        "type": "text",
-        "id": "fetr_titltwo",
-        "label": "Title",
-        "default": "Enter Yor title"
-       },
-       
-       {
-        "type": "text",
-        "id": "fterbtn_titltwo",
-        "label": "Button Title",
-        "default": "Enter Button Title"
-       },
-       {
-          "id": "fterbnr_btnlinktwo",
-          "type": "url",
-          "label": "Button Link"
-        },
-        {
-          "type": "image_picker",
-          "id": "fetr_imgtwo",
-          "label": "Select image"
-        },
-        {
-           "type": "header", 
-           "content": "Quote Slider Section Start" 
-      }, 
-      {
-        "type": "text",
-        "id": "fetr_titlthree",
-        "label": "Title",
-        "default": "Enter Yor title"
-       },
-        {
-           "type": "header", 
-           "content": "Our Partners Section Start" 
-      }, 
-      {
-        "type": "text",
-        "id": "fetr_titlfour",
-        "label": "Title",
-        "default": "Enter Yor title"
-       }
-    ],
-     "blocks": [
-          {
-            "type": "qute",
-            "name": "Quote Slider Content",
-            "settings": [    
-                {
-                    "type": "textarea",
-                    "id": "quot_descript",
-                    "label": "Description",
-                    "default": "Enter Description"
-                },
-                {
-                  "type": "text",
-                  "id": "authr_name",
-                  "label": "Author Name",
-                  "default": " Enter Author Name "
-                },
-                {
-                  "type": "text",
-                  "id": "quor_ratingone",
-                  "label": "Rating One",
-                  "default": " icon-star "
-                },
-                {
-                  "type": "text",
-                  "id": "quor_ratingtwo",
-                  "label": "Rating Two",
-                  "default": " icon-star "
-                },
-                {
-                  "type": "text",
-                  "id": "quor_ratingthree",
-                  "label": "Rating three",
-                  "default": " icon-star "
-                },
-                {
-                  "type": "text",
-                  "id": "quor_ratingfoue",
-                  "label": "Rating Four",
-                  "default": " icon-star "
-                },
-                {
-                  "type": "text",
-                  "id": "quor_ratingfive",
-                  "label": "Rating Five",
-                  "default": " icon-star "
-                }
-                
-            ]    
-          },
-          {
-            "type": "partners",
-            "name": "Partners Content",
-            "settings": [    
-                {
-                  "type": "image_picker",
-                  "id": "fetr_imgfour",
-                  "label": "Select image"
-                }
-                
-            ]    
-          }
-          ],
-    "presets":[
-      {
-      "name": "Home Features",
-      "category": "Home"
-      }
-  ]
-  }
-  {% endschema %}
+ 
   
   {% style %}
   
