--- a/snippets/features.liquid
+++ b/snippets/features.liquid
@@ -26,7 +26,7 @@
         <div class="mini-wrap">
           <div class="intro-text">
             <div class="sub-title">
-              <h3>{{section.settings.fetr_titltwo}}</h3>
+              <h3>9 powerful natural<br> ingredients combined<br> into one capsule.</h3>
             </div>
             <div class="btn">
               <a href="{{section.settings.fterbnr_btnlinktwo}}" class="main-btn">{{section.settings.fterbtn_titltwo}}</a>
