--- a/snippets/features.liquid
+++ b/snippets/features.liquid
@@ -29,14 +29,14 @@
               <h3>9 powerful natural<br> ingredients combined<br> into one capsule.</h3>
             </div>
             <div class="btn">
-              <a href="{{section.settings.fterbnr_btnlinktwo}}" class="main-btn">{{section.settings.fterbtn_titltwo}}</a>
+              <a href="/pages/curalin-advanced-glucose-support" class="main-btn">learn more</a>
             </div>
           </div>
-          {% if section.settings.fetr_imgtwo != blank %}
+         
           <div class="img-wrap">
-            <img src="{{ section.settings.fetr_imgtwo | img_url: '' }}" alt="" width="332" height="auto">
+            <img src="{{ 'cust_536e945c-3cbe-4c35-8ec8-8a8f31c1850d.png' | file_url }}" alt="" width="426" height="240">
           </div>
-          {% endif %}
+       
         </div>
       </div>
     </div>
