--- a/snippets/features.liquid
+++ b/snippets/features.liquid
@@ -45,7 +45,7 @@
       <div class="mini-wrap">
         <div class="changing-experiences">
           <div class="sub-title">
-            <h3>{{section.settings.fetr_titlthree}}</h3>
+            <h3>Life Changing Experiences</h3>
           </div>
           <div class="quote-slider">
             <div class="swiper">
