--- a/snippets/features.liquid
+++ b/snippets/features.liquid
@@ -41,7 +41,7 @@
       </div>
     </div>
   
-    <div class="container">
+    {% comment %} <div class="container">
       <div class="mini-wrap">
         <div class="changing-experiences">
           <div class="sub-title">
@@ -84,9 +84,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> {% endcomment %}
   
-    <div class="making-headlines">
+    {% comment %} <div class="making-headlines">
       <div class="container">
         <div class="sub-title">
             <h3>{{section.settings.fetr_titlfour}}</h3>
@@ -103,7 +103,7 @@
             </ul>
         </div>
       </div>
-    </div>
+    </div> {% endcomment %}
   </div>
   
   <script>
