--- a/sections/homepage-content.liquid
+++ b/sections/homepage-content.liquid
@@ -1,5 +1,5 @@
 {% render 'homepage-hero' %}
-{% comment %} {% render 'features' %} {% endcomment %}
+{% render 'homepage-features' %} 
 
 {% schema %}
   {
