--- a/sections/homepage-content.liquid
+++ b/sections/homepage-content.liquid
@@ -1,5 +1,5 @@
 {% render 'homepage-hero' %}
-{% render 'homepage-features' %} 
+{% comment %} {% render 'homepage-features' %}  {% endcomment %}
 
 {% schema %}
   {
