--- a/snippets/homepage-features.liquid
+++ b/snippets/homepage-features.liquid
@@ -40,70 +40,6 @@
         </div>
       </div>
     </div>
-  
-    {% comment %} <div class="container">
-      <div class="mini-wrap">
-        <div class="changing-experiences">
-          <div class="sub-title">
-            <h3>Life Changing Experiences</h3>
-          </div>
-          <div class="quote-slider">
-            <div class="swiper">
-              <div class="swiper-wrapper">
-                {% for block in section.blocks %}
-                {% if block.type == 'qute' %}
-                <div class="swiper-slide">
-                  <div class="quote-card">
-                    <blockquote>
-                        <p>{{block.settings.quot_descript}}</p>
-                    </blockquote>
-                    <div class="quote-info">
-                      <div class="quote-author">
-                        <p>{{block.settings.authr_name}}</p>
-                      </div>
-                      <div class="quote-rating">
-                        <p>
-                          <span class="{{block.settings.quor_ratingone}}"></span>
-                          <span class="{{block.settings.quor_ratingtwo}}"></span>
-                          <span class="{{block.settings.quor_ratingthree}}"></span> 
-                          <span class="{{block.settings.quor_ratingfoue}}"></span>
-                          <span class="{{block.settings.quor_ratingfive}}"></span>
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div> 
-                {% endif %}
-                {% endfor %}
-              </div>
-              <div class="slider-control">
-                  <div class="prev-slide2"><span class="icon-arrow"></span></div>
-                  <div class="next-slide2"><span class="icon-arrow"></span></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> {% endcomment %}
-  
-    {% comment %} <div class="making-headlines">
-      <div class="container">
-        <div class="sub-title">
-            <h3>{{section.settings.fetr_titlfour}}</h3>
-        </div>
-        <div class="logo-list">
-            <ul>
-                {% for block in section.blocks %}
-                {% if block.type == 'partners' %}
-                {% if block.settings.fetr_imgfour != blank %}
-                <li><img src="{{ block.settings.fetr_imgfour | img_url: '' }}" alt=""></li>
-                {% endif %}
-                {% endif %}
-              {% endfor %}
-            </ul>
-        </div>
-      </div>
-    </div> {% endcomment %}
   </div>
   
   <script>
@@ -133,33 +69,27 @@
       }
     });
   </script>
-  
- 
-  
-  {% style %}
-  
-  .feature-info h1 {
-   text-align: left;
-  }
-  
-  @media screen and (max-width: 480px) {
-    .feature-info {
-    flex-wrap: wrap;
+
+  <style>
+    .feature-info h1 {
+     text-align: left;
     }
-  
-    .natural-ingredients .mini-wrap {
-    flex-wrap: wrap;
+
+    @media screen and (max-width: 480px) {
+      .feature-info {
+      flex-wrap: wrap;
+      }
+
+      .natural-ingredients .mini-wrap {
+      flex-wrap: wrap;
+      }
+
+    .refer-friend {
+      flex-wrap: wrap;
     }
-  
-  .refer-friend {
-    flex-wrap: wrap;
-  }
-  
-  .refer-friend .img-wrap {
-    padding-top: 32px;
-  }
-  }
-  {% endstyle %}
-  
-  {% javascript %}
-  {% endjavascript %}
+
+    .refer-friend .img-wrap {
+      padding-top: 32px;
+    }
+    }
+  </style>
