--- a/snippets/homepage-changing-experience.liquid
+++ b/snippets/homepage-changing-experience.liquid
@@ -1,3 +1,14 @@
+{% assign experienses = '“Outstanding product and results. I cannot thank you enough for making
+this
+possible.”*Michael Edwards
+|“CuraLin has worked exceptionally well for me! Thank you CuraLin for
+helping
+me help
+myself feel better naturally. Definitely 5 stars!”*Colin Reader
+|lp-aio-raz.png*Jeff Ogden
+
+' | split: '|' %}
+
 <div class="container">
   <div class="mini-wrap">
     <div class="changing-experiences">
@@ -7,16 +18,16 @@
       <div class="quote-slider">
         <div class="swiper">
           <div class="swiper-wrapper">
-            {% for block in section.blocks %}
-            {% if block.type == 'qute' %}
+            {% for experience in experienses %}
+            
             <div class="swiper-slide">
               <div class="quote-card">
                 <blockquote>
-                  <p>{{block.settings.quot_descript}}</p>
+                  <p>{{ experience | split: "*" | first }}</p>
                 </blockquote>
                 <div class="quote-info">
                   <div class="quote-author">
-                    <p>{{block.settings.authr_name}}</p>
+                    <p>{{ experience | split: "*" | last }}</p>
                   </div>
                   <div class="quote-rating">
                     <p>
@@ -30,7 +41,6 @@
                 </div>
               </div>
             </div>
-            {% endif %}
             {% endfor %}
           </div>
           <div class="slider-control">
