--- a/snippets/homepage-features.liquid
+++ b/snippets/homepage-features.liquid
@@ -40,8 +40,110 @@
         </div>
       </div>
     </div>
+  
+    {% assign experienses = '“Outstanding product and results. I cannot thank you enough for making
+    this
+    possible.”*Michael Edwards
+    |“CuraLin has worked exceptionally well for me! Thank you CuraLin for
+    helping
+    me help
+    myself feel better naturally. Definitely 5 stars!”*Colin Reader
+    |lp-aio-raz.png*Jeff Ogden
+
+    ' | split: '|' %}
+
+    <div class="container">
+      <div class="mini-wrap">
+        <div class="changing-experiences">
+          <div class="sub-title">
+            <h3>Life Changing Experiences</h3>
+          </div>
+          <div class="quote-slider">
+            <div class="swiper">
+              <div class="swiper-wrapper">
+                {% for experience in experienses %}
+
+                <div class="swiper-slide">
+                  <div class="quote-card">
+                    <blockquote>
+                      <p>{{ experience | split: "*" | first }}</p>
+                    </blockquote>
+                    <div class="quote-info">
+                      <div class="quote-author">
+                        <p>{{ experience | split: "*" | last }}</p>
+                      </div>
+                      <div class="quote-rating">
+                        <p>
+                          <span class="icon-star"></span>
+                          <span class="icon-star"></span>
+                          <span class="icon-star"></span>
+                          <span class="icon-star"></span>
+                          <span class="icon-star"></span>
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                {% endfor %}
+              </div>
+              <div class="slider-control">
+                <div class="prev-slide2"><span class="icon-arrow"></span></div>
+                <div class="next-slide2"><span class="icon-arrow"></span></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  
+    {% comment %} <div class="making-headlines">
+      <div class="container">
+        <div class="sub-title">
+            <h3>{{section.settings.fetr_titlfour}}</h3>
+        </div>
+        <div class="logo-list">
+            <ul>
+                {% for block in section.blocks %}
+                {% if block.type == 'partners' %}
+                {% if block.settings.fetr_imgfour != blank %}
+                <li><img src="{{ block.settings.fetr_imgfour | img_url: '' }}" alt=""></li>
+                {% endif %}
+                {% endif %}
+              {% endfor %}
+            </ul>
+        </div>
+      </div>
+    </div> {% endcomment %}
   </div>
   
+  <script>
+    quoteSlider = new Swiper(".quote-slider .swiper", {
+      slidesPerView: 2,
+      spaceBetween: 0,
+      grabCursor: true,
+      autoHeight: true,
+      loop: true,
+      navigation: {
+        nextEl: ".next-slide2",
+        prevEl: ".prev-slide2",
+        disabledClass: 'disabled'
+      },
+      breakpoints: {
+        0: {
+          slidesPerView: 1
+        },
+        630: {
+          slidesPerView: 2,
+          centeredSlides: false
+        },
+        992: {
+          slidesPerView: 3,
+          centeredSlides: true
+        }
+      }
+    });
+  </script>
 
   <style>
     .feature-info h1 {
