--- a/snippets/homepage-features.liquid
+++ b/snippets/homepage-features.liquid
@@ -41,7 +41,7 @@
       </div>
     </div>
   
-    {% assign experienses = '“Outstanding product and results. I cannot thank you enough for making
+    {% comment %} {% assign experienses = '“Outstanding product and results. I cannot thank you enough for making
     this
     possible.”*Michael Edwards
     |“CuraLin has worked exceptionally well for me! Thank you CuraLin for
@@ -50,7 +50,7 @@
     myself feel better naturally. Definitely 5 stars!”*Colin Reader
     |lp-aio-raz.png*Jeff Ogden
 
-    ' | split: '|' %}
+    ' | split: '|' %} {% endcomment %}
 
 
     {% render 'homepage-changing-experience', experiences: experiences %}
