--- a/snippets/homepage-changing-experience.liquid
+++ b/snippets/homepage-changing-experience.liquid
@@ -1,4 +1,4 @@
-{% assign experienses = '“Outstanding product and results. I cannot thank you enough for making
+{% comment %} {% assign experienses = '“Outstanding product and results. I cannot thank you enough for making
 this
 possible.”*Michael Edwards
 |“CuraLin has worked exceptionally well for me! Thank you CuraLin for
@@ -7,7 +7,7 @@ me help
 myself feel better naturally. Definitely 5 stars!”*Colin Reader
 |lp-aio-raz.png*Jeff Ogden
 
-' | split: '|' %}
+' | split: '|' %} {% endcomment %}
 
 
 <div class="container">
