--- a/snippets/homepage-features.liquid
+++ b/snippets/homepage-features.liquid
@@ -41,7 +41,7 @@
       </div>
     </div>
   
-    {% comment %} {% assign experienses = '“Outstanding product and results. I cannot thank you enough for making
+    {% assign experienses = '“Outstanding product and results. I cannot thank you enough for making
     this
     possible.”*Michael Edwards
     |“CuraLin has worked exceptionally well for me! Thank you CuraLin for
@@ -50,10 +50,10 @@
     myself feel better naturally. Definitely 5 stars!”*Colin Reader
     |lp-aio-raz.png*Jeff Ogden
 
-    ' | split: '|' %} {% endcomment %}
+    ' | split: '|' %}
 
 
-    {% render 'homepage-changing-experience', experiences: experiences %}
+    {% render 'homepage-changing-experience', experienses: experienses %}
 
     {% comment %} <div class="container">
       <div class="mini-wrap">
