--- a/snippets/homepage-features.liquid
+++ b/snippets/homepage-features.liquid
@@ -120,7 +120,7 @@
     </div> {% endcomment %}
   </div>
   
-  <script>
+  {% comment %} <script>
     quoteSlider = new Swiper(".quote-slider .swiper", {
       slidesPerView: 2,
       spaceBetween: 0,
@@ -146,7 +146,7 @@
         }
       }
     });
-  </script>
+  </script> {% endcomment %}
 
   <style>
     .feature-info h1 {
