--- a/snippets/homepage-winning-diabetes.liquid
+++ b/snippets/homepage-winning-diabetes.liquid
@@ -7,11 +7,11 @@
     <div class="mini-wrap">
         <div class="intro-text">
             <div class="sub-title">
-                <h2>{{section.settings.win_titl}}</h2>
-                <p>{{section.settings.winr_desc}}</p>
+                <h2>Winning Type 2<br> Diabetes Together</h2>
+                <p>Every day, people around the world connect in our active community to share advice, get support, and help each other live a healthier fuller life. It’s a movement changing lives across the globe.</p>
             </div>
             <div class="btn">
-                <a href="{{section.settings.win_btnlink}}" class="main-btn" target="_blank">{{section.settings.win_btntitl}}</a>
+                <a href="https://www.facebook.com/groups/winningtype2diabetestogether" class="main-btn" target="_blank">Join the Community</a>
             </div>
         </div>
     </div>
