--- a/snippets/homepage-features.liquid
+++ b/snippets/homepage-features.liquid
@@ -63,6 +63,8 @@
     |daily-mail.png" | split: "|" %}
 
     {% render 'homepage-making-headlines', logoImages: logoImages %}
+    {% render 'homepage-winning-diabetes' %} 
+    {% render 'homepage-friend-refer' %} 
 
   </div>
   
@@ -82,12 +84,6 @@
       flex-wrap: wrap;
       }
 
-    .refer-friend {
-      flex-wrap: wrap;
-    }
-
-    .refer-friend .img-wrap {
-      padding-top: 32px;
-    }
+  
     }
   </style>
