--- a/snippets/homepage-friend-refer.liquid
+++ b/snippets/homepage-friend-refer.liquid
@@ -23,3 +23,17 @@
 
 {% render 'newsletter-form' %}
 
+
+<style>
+
+    @media screen and (max-width: 480px) {
+     
+    .refer-friend {
+      flex-wrap: wrap;
+    }
+
+    .refer-friend .img-wrap {
+      padding-top: 32px;
+    }
+    }
+  </style>
