--- a/snippets/homepage-changing-experience.liquid
+++ b/snippets/homepage-changing-experience.liquid
@@ -48,7 +48,7 @@
 
  <script>
   quoteSlider = new Swiper(".quote-slider .swiper", {
-    slidesPerView: 2,
+    slidesPerView: auto,
     spaceBetween: 0,
     grabCursor: true,
     autoHeight: true,
