--- a/snippets/homepage-features.liquid
+++ b/snippets/homepage-features.liquid
@@ -48,7 +48,9 @@
     helping
     me help
     myself feel better naturally. Definitely 5 stars!”*Colin Reader
-    |lp-aio-raz.png*Jeff Ogden
+    |“It started with my manager now 4 of us are on it. My doctor said give it
+    a
+    try.”*Jeff Ogden
 
     ' | split: '|' %}
 
