--- a/snippets/products-catalog-section.liquid
+++ b/snippets/products-catalog-section.liquid
@@ -312,6 +312,12 @@
       font-size: 4vw;
     }
   }
+
+  @media screen and (max-width: 640px) {
+    #product-catalog-section .product-list {
+      gap: 2vw;
+    }
+  }
 </style>
 
 {% if isSkipCart %}
