--- a/assets/bundle.css
+++ b/assets/bundle.css
@@ -2364,7 +2364,7 @@ footer .bottom-info .info-wrap .text p {
 }
 
 .sub-title {
-  /* text-align: center; */
+  text-align: center;
   color: var(--dark);
 }
 
