--- a/snippets/aio-first-page-meet-curalin.liquid
+++ b/snippets/aio-first-page-meet-curalin.liquid
@@ -323,6 +323,9 @@
     .meet-curalin .data-wrap {
       padding: 0 1.5rem
     }
+    .meet-curalin .sub-title {
+      text-align: left !important;
+    }
 
     .meet-curalin .sub-title h3 {
       font-weight: 400;
