--- a/snippets/aio-first-page-meet-curalin.liquid
+++ b/snippets/aio-first-page-meet-curalin.liquid
@@ -321,7 +321,7 @@
 
 <style>
     .meet-curalin .data-wrap {
-      padding: 0 1.5rem
+      padding: 1rem 1.5rem
     }
     .meet-curalin .sub-title {
       text-align: left !important;
