--- a/snippets/aio-first-page-meet-curalin.liquid
+++ b/snippets/aio-first-page-meet-curalin.liquid
@@ -340,8 +340,8 @@
 
     @media screen and (max-width: 768px) {
         .meet-curalin .sub-title h3 {
-           font-size: 7vw;
-           line-height: unset;
+           font-size: 5vw;
+           {% comment %} line-height: unset; {% endcomment %}
        }
     }
 </style>
