--- a/snippets/bundle-gifts-section.liquid
+++ b/snippets/bundle-gifts-section.liquid
@@ -43,7 +43,8 @@
     }
 
     #bundles-section h2 {
-      font-size: 7vw;
+      font-family: 'Poppins';
+      font-size: 9vw;
       padding: 30px 0;
     }
 
