--- a/snippets/trust-badges-section.liquid
+++ b/snippets/trust-badges-section.liquid
@@ -26,7 +26,7 @@
   }
 
   #trust-badges-section .container .border-bottom {
-    border: solid 1px #DCD9D9;
+    border-bottom: solid 1px #DCD9D9;
     transform: matrix(1, 0, 0, -1, 0, 0);
   }
 
