--- a/snippets/layout.head.pricing-test-script.liquid
+++ b/snippets/layout.head.pricing-test-script.liquid
@@ -1,7 +1,7 @@
 <script>
   $( document ).ready(function() {
     if ($.cookie('_gaexp')) {
-      if ($.cookie('_gaexp').endsWith('1') && $.cookie('_gaexp').startsWith('GAX1.2.EZO')) {
+      if ($.cookie('_gaexp').endsWith('1') && $.cookie('_gaexp').startsWith('GAX1.2.z5')) {
         let redirectPages = [
           '/collections/all',
           '/collections/all-2',
