--- a/snippets/product-all-in-one-cta-section-sliders.liquid
+++ b/snippets/product-all-in-one-cta-section-sliders.liquid
@@ -120,7 +120,7 @@
               <div class="variant-box">
                 <div class="radio-box">
                   {% if original_item_cap_total_with_bundle > var.price %}
-                    {% assign discount = original_item_cap_total_with_bundle | minus: var.price | plus: challenge_value | divided_by: 100 %}
+                    {% assign discount = original_item_cap_total_with_bundle | minus: var.price | divided_by: 100 %}
                   {% else %}
                     {% assign discount = 0 %}
                   {% endif %}
