--- a/snippets/products-catalog-section.liquid
+++ b/snippets/products-catalog-section.liquid
@@ -285,6 +285,11 @@
   } {% endcomment %}
 
   @media screen and (max-width:768px) {
+    #product-catalog-section .product-list {
+      gap: 3vw;
+      flex-direction: column;
+    }
+
     #product-catalog-section .product-card {
       max-width: 100%;
       padding: 10px;
@@ -312,12 +317,6 @@
 
     #product-catalog-section .product-card .info .main-btn {
       font-size: 4vw;
-    }
-  }
-
-  @media screen and (max-width: 640px) {
-    #product-catalog-section .product-list {
-      gap: 3vw;
     }
   }
 </style>
