--- a/snippets/products-catalog-section.liquid
+++ b/snippets/products-catalog-section.liquid
@@ -305,6 +305,10 @@
       padding-top: 4vw;
     }
 
+    #product-catalog-section .product-card .info .price strike {
+      font-size: 18px;
+    }
+
     #product-catalog-section .product-card .info .price .rounded.current-price {
       font-size: 41px;
       padding-left: 1vw;
