--- a/snippets/collection-titles.liquid
+++ b/snippets/collection-titles.liquid
@@ -29,9 +29,9 @@
   }
 
   @media screen and (max-width: 768px) {
-    #collection-titles-section {
+    {% comment %} #collection-titles-section {
       margin-top: 30px;
-    }
+    } {% endcomment %}
     #collection-titles-section .titles {
       font-size: 8vw;
     }
