--- a/snippets/product-all-in-one-cta-section-sliders.liquid
+++ b/snippets/product-all-in-one-cta-section-sliders.liquid
@@ -671,7 +671,7 @@
 </script>
 
 <script>
-  // Slide to Variant Image
+  /*Slide to Variant Image*/
   productSliderAllInOne.on('slideChange', function () {
     $('iframe#product-video-iframe').attr( 'src', function ( i, val ) { return val; });
   });
