--- a/snippets/product-all-in-one-cta-section-sliders.liquid
+++ b/snippets/product-all-in-one-cta-section-sliders.liquid
@@ -692,7 +692,7 @@
      $("#productVaraintSelected").prop('value', $(this).find('input[type=radio]')[0].value);
 
 
-      // Slide to Variant Image
+      /*Slide to Variant Image*/
       let slideIndex = productSliderAllInOne.slides.length - jQuery('input[name=pack]:checked', '#CTAForm').attr('index');
       productSliderAllInOne.slideTo(slideIndex)
 
