--- a/snippets/aio-first-page-hero-section.liquid
+++ b/snippets/aio-first-page-hero-section.liquid
@@ -201,8 +201,9 @@
 
   @media screen and (max-width: 768px) {
     #hero-section img.logo {
+      display: flex;
+      margin: 0 auto 20px;
       width: 120px;
-      margin-bottom: 20px;
     }
 
     .brand-intro-cover-img-mobile {
