--- a/snippets/featured-on-quiz2.liquid
+++ b/snippets/featured-on-quiz2.liquid
@@ -78,7 +78,9 @@
 </div>
 
 <style>
-
+  section {
+    padding: 20px 0 !important;
+}
 .featured-section {
   background-color:#FFFFFF;
   padding-top: 1.0625rem;
