--- a/snippets/aio-first-page-hero-section.liquid
+++ b/snippets/aio-first-page-hero-section.liquid
@@ -52,6 +52,10 @@
    padding: 0 15px
    }
 
+
+  #hero-section {
+    padding: unset !important;
+  }
  
   #hero-section:before {
     content: "";
