--- a/snippets/aio-first-page-hero-section.liquid
+++ b/snippets/aio-first-page-hero-section.liquid
@@ -45,7 +45,7 @@
     margin: 0;
   }
 
-   .container {
+  #hero-section .container {
    width: 100%;
    max-width: 1200px;
    margin: 50px auto;
