--- a/snippets/new-year-hero-banner-content-curalin.liquid
+++ b/snippets/new-year-hero-banner-content-curalin.liquid
@@ -94,7 +94,7 @@
     }
 
     .hero-banner .text-button .cta-btn {
-      bottom: 0;
+      bottom: 15px;
       left: 5%;
       position: absolute;
       width: 90%;
