--- a/snippets/new-year-hero-banner-content-curalin.liquid
+++ b/snippets/new-year-hero-banner-content-curalin.liquid
@@ -111,8 +111,8 @@
     }
 
     .hero-banner-content .text-button .subtitle {
-      text-align: center;
-      max-width: unset;
+      margin: 0 auto;
+      max-width: 280px;
     }
 
     .hero-banner-content .main-img {
