--- a/snippets/new-year-hero-banner-content-curalin.liquid
+++ b/snippets/new-year-hero-banner-content-curalin.liquid
@@ -122,7 +122,7 @@
     .hero-banner .main-img-mb {
       display: block;
       position: absolute;
-      top: 15vw;
+      top: 100px;
       width: 120%;
     }
 
@@ -138,27 +138,6 @@
 
   }
 
-  @media screen and (max-width: 610px) {
-    .hero-banner .main-img-mb {
-      top: 35vw;
-    }
-  }
-
-  @media screen and (max-width: 530px) {
-    .hero-banner .main-img-mb {
-      top: 45vw;
-    }
-  }
-
-  @media screen and (max-width: 420px) {
-    .hero-banner .main-img-mb {
-      top: 60vw;
-    }
-  }
-
-  @media screen and (max-width: 342px) {
-    .hero-banner .main-img-mb {
-      top: 80vw;
-    }
+  
   }
 </style>
