--- a/snippets/new-year-hero-banner-content-curalin.liquid
+++ b/snippets/new-year-hero-banner-content-curalin.liquid
@@ -122,7 +122,7 @@
     .hero-banner .main-img-mb {
       display: block;
       position: absolute;
-      top: 100px;
+      top: {% if isLP %} 270px {% else %} 100px {% endif %};
       width: 120%;
     }
 
