--- a/snippets/bundle-gifts-section.liquid
+++ b/snippets/bundle-gifts-section.liquid
@@ -1,6 +1,7 @@
 <section id="bundles-section">
   {% if shop.name == "CuraLife" %}
     <h2>Everything you need to keep your blood sugar happy!</h2>
+    <div class="icon-arrow"></div>
 
     {% render 'challenge-section' %}
 
@@ -33,6 +34,12 @@
     left: calc(50% - 0.5em);
     text-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
     line-height: unset !important;
+  }
+
+  #bundles-section .icon-arrow {
+    display: flex;
+    justify-content: center;
+    color: var(--dark-green);
   }
 
   @media screen and (max-width: 768px) {
