--- a/snippets/bundle-gifts-section.liquid
+++ b/snippets/bundle-gifts-section.liquid
@@ -40,6 +40,7 @@
     display: flex;
     justify-content: center;
     color: var(--dark-green);
+    font-size: clamp(40px, 2vw, 60px);
   }
 
   @media screen and (max-width: 768px) {
