--- a/snippets/collection-titles.liquid
+++ b/snippets/collection-titles.liquid
@@ -12,6 +12,10 @@
 </section>
 
 <style>
+  #collection-titles-section {
+    padding-bottom: 45px;
+    padding-top: 70px;
+  }
   #collection-titles-section .titles {
     font-family: "PP Radio Grotesk";
     font-size: 50px;
