--- a/snippets/collection-titles.liquid
+++ b/snippets/collection-titles.liquid
@@ -13,8 +13,7 @@
 
 <style>
   #collection-titles-section {
-    padding-bottom: 45px;
-    padding-top: 70px;
+   padding: 45px 0;
   }
   #collection-titles-section .titles {
     font-family: "PP Radio Grotesk";
