--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -10,10 +10,10 @@ input[type=number] {
     -moz-appearance: textfield;
 }
 
-*, *:before, *:after {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
+// *, *:before, *:after {
+//   -webkit-box-sizing: border-box;
+//   box-sizing: border-box;
+// }
 
 h1, h2, h3 {
   font-family: "PP Radio Grotesk", sans-serif;
