--- a/snippets/product-all-in-one-cta-section-sliders.liquid
+++ b/snippets/product-all-in-one-cta-section-sliders.liquid
@@ -583,6 +583,10 @@
       max-width: unset
   }
 
+  .cta-section .product-container .product-actions .form-wrap #CTAForm .variant-box .variant-info .variant-title {
+    font-size: 14px;
+  }
+
   .cta-section .product-container .product-actions .form-wrap #CTAForm .submit-wrap .qty-data .qty-control {
       border: 1px solid #ffb22d
   }
