--- a/snippets/bundle-gifts-section.liquid
+++ b/snippets/bundle-gifts-section.liquid
@@ -40,7 +40,7 @@
     display: flex;
     justify-content: center;
     color: var(--dark-green);
-    font-size: clamp(40px, 2vw, 60px);
+    font-size: 150px;
   }
 
   @media screen and (max-width: 768px) {
@@ -57,6 +57,10 @@
     #bundles-section i.plus {
       font-size: 30vw;
       margin-top: -17vw;
+    }
+
+    #bundles-section .icon-arrow {
+      font-size: 18vw;
     }
   }
 </style>
