--- a/snippets/challenge-section.liquid
+++ b/snippets/challenge-section.liquid
@@ -37,7 +37,7 @@
     position: relative;
     background: #FFF9F5;
     color: var(--dark-green);
-    padding: 50px 0;
+    {% comment %} padding: 50px 0; {% endcomment %}
     line-height: 1.2em;
   }
 
