--- a/snippets/new-year-hero-banner-content-curalin.liquid
+++ b/snippets/new-year-hero-banner-content-curalin.liquid
@@ -14,6 +14,10 @@
 </section>
 
 <style>
+
+  section {
+    padding: {% if isLP %}unset{% endif %};
+  }
   .hero-banner {
     position: relative;
     overflow: hidden;
