--- a/snippets/new-year-hero-banner-content-curalin.liquid
+++ b/snippets/new-year-hero-banner-content-curalin.liquid
@@ -59,6 +59,7 @@
     display: flex;
     align-items: center;
     height: 100%;
+    padding-top: 20px;
   }
 
   .hero-banner-content .text-button {
