--- a/snippets/new-year-hero-banner-content-curalin.liquid
+++ b/snippets/new-year-hero-banner-content-curalin.liquid
@@ -43,6 +43,7 @@
     border: 1px solid  var(--dark-green);
     border-radius: 4px;
     font-size: clamp(20px, 2vw, 18px);
+  letter-spacing: {% if isLP %} 1.5px {% endif %};
     color: white;
     padding: 10px 30px;
     box-shadow: 0px 5px 12.5px rgba(0, 0, 0, 0.15);
