--- a/snippets/new-year-hero-banner-content-curalin.liquid
+++ b/snippets/new-year-hero-banner-content-curalin.liquid
@@ -25,7 +25,7 @@
 
   .hero-banner .main-img {
     position: relative;
-    left: 50px;
+    left: {% if isLP %}36px{% else %}50px{% endif %};
   }
 
   .hero-button h1 {
