--- a/snippets/aio-first-page-hero-section.liquid
+++ b/snippets/aio-first-page-hero-section.liquid
@@ -4,7 +4,7 @@
       <img class="logo" src="{{ "logo-new.svg" | asset_url }}" width='264'  height="61" alt="logo">
     {% endif %}
 
-    <h1>Natural &<br>Effective Blood<br>Sugar Support</h1>
+    <h1>Natural & Effective Blood Sugar Support</h1>
     <div class="brand-welcome-text">
       <h2 class="v3">So you can
         <span class="title-text">eat well</span>
@@ -81,7 +81,7 @@
 
   #hero-section h1 {
     font-size: 2.7rem;
-    color: #000000ab
+    
   }
 
   #hero-section .brand-welcome-text {
