--- a/snippets/aio-first-page-hero-section.liquid
+++ b/snippets/aio-first-page-hero-section.liquid
@@ -80,6 +80,7 @@
   }
 
   #hero-section h1 {
+    width: 270px;
     font-size: 2.7rem;
     
   }
@@ -142,6 +143,7 @@
       }
 
       #hero-section h1 {
+        width: unset;
         text-align: center;
         font-size: 1.75rem;
       }
