--- a/snippets/aio-first-page-hero-section.liquid
+++ b/snippets/aio-first-page-hero-section.liquid
@@ -81,7 +81,7 @@
 
   #hero-section h1 {
     width: 270px;
-    font-size: 2.7rem;
+    font-size: clamp(28px, 2vw, 48px);
     
   }
 
@@ -145,7 +145,7 @@
       #hero-section h1 {
         width: unset;
         text-align: center;
-        font-size: 1.75rem;
+      
       }
 
       #hero-section .brand-welcome-text * {
