--- a/snippets/aio-first-page-hero-section.liquid
+++ b/snippets/aio-first-page-hero-section.liquid
@@ -132,7 +132,9 @@
     }
 
     @media screen and (max-width: 768px) {
-
+      #hero-section .container {
+        margin: unset;
+      }
       #hero-section .brand-intro-cover span {
         width: 100%;
         position: static
