--- a/snippets/aio-first-page-hero-section.liquid
+++ b/snippets/aio-first-page-hero-section.liquid
@@ -194,7 +194,7 @@
   @media screen and (max-width: 768px) {
     #hero-section img.logo {
       display: flex;
-      margin: 0 auto 20px;
+      margin: 20px auto;
       width: 120px;
     }
 
