--- a/snippets/partnerships-featured.liquid
+++ b/snippets/partnerships-featured.liquid
@@ -88,7 +88,7 @@
   .featured-section {
     font-family: "Poppins", sans-serif;
 
-    padding-bottom: 3.6875rem
+    padding: 76px 0;
   }
 
   .featured-section .sub-title {
