--- a/snippets/partnerships-featured.liquid
+++ b/snippets/partnerships-featured.liquid
@@ -169,7 +169,8 @@
     max-width: -moz-max-content;
     max-width: max-content;
     padding-left: 1.875rem;
-    padding-right: 1.875rem
+    padding-right: 1.875rem;
+    padding-bottom: 1.65rem;
   }
 
   .partners-wrapper .partner-item {
