--- a/snippets/header-flash.liquid
+++ b/snippets/header-flash.liquid
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="container-text">
             <div class="big-img part-20">
-              <a href="/"><img class="logo" src="{{ logoFileName | asset_url }}" width="164" height="45" alt="logo"></a>
+              <a href="/"><img class="logo" src="{{ 'logo-new.svg' | asset_url }}" width="164" height="45" alt="logo"></a>
             </div>
             <div class="middle-flash-sale part-60">
                 <div class="flash-sale-desktop"><img src="{{ 'header-flash-sale.png' | asset_url }}" alt="" loading="lazy"></div>
