--- a/templates/page.aio-first-page-flash.liquid
+++ b/templates/page.aio-first-page-flash.liquid
@@ -85,7 +85,7 @@ anymore
 |lp-aio-sarah.png*Dr. Sarah Brewer:Functional doctor, diabetes expert, and author of over 60 books on personal
 health.
 ' | split: '|' %}
-
+  {% render 'sale-banner', instance_id: 'first', desktopContent: "logo,cta-button", mobileContent: "logo,cta-button", bgColor: "#F59E80", logoFileName: "logo-new.svg", isFixed: true, ctaButtonLink: "/", ctaButtonTitle: "SAVE UP TO 20%" %}
   {% render 'header-flash' %}
   {% render 'aio-first-page-hero-section' %}
   {% render 'partnerships-featured' %}
