--- a/templates/page.aio-first-page-flash.liquid
+++ b/templates/page.aio-first-page-flash.liquid
@@ -85,7 +85,7 @@ anymore
 |lp-aio-sarah.png*Dr. Sarah Brewer:Functional doctor, diabetes expert, and author of over 60 books on personal
 health.
 ' | split: '|' %}
-  {% render 'sale-banner', instance_id: 'second', desktopContent: "logo,ctaTitle", mobileContent: "logo,ctaTitle", bgColor: "#F59E80", logoFileName: "logo-new.svg", ctaTitle: "SAVE UP TO 20%" %}
+  {% render 'sale-banner', instance_id: 'second', desktopContent: "logo,ctaTitle", mobileContent: "logo,ctaTitle", bgColor: "pink", logoFileName: "logo-new.svg", ctaTitle: "SAVE UP TO 20%" %}
   
   {% render 'aio-first-page-hero-section' %}
   {% render 'partnerships-featured' %}
