--- a/snippets/sale-banner.liquid
+++ b/snippets/sale-banner.liquid
@@ -28,7 +28,7 @@
 </div>
 <style>
   .sale-banner.{{ instance_id }} {
-    background: {% if bgColor == "red" %}linear-gradient(#A9151E, #d50b15){% elsif bgColor == "green" %}linear-gradient(var(--dark-green), var(--dark-green)){% else %}white{% endif %};
+    background: {% if bgColor == "pink" %}linear-gradient(#A9151E, #d50b15){% elsif bgColor == "green" %}linear-gradient(var(--dark-green), var(--dark-green)) {% elsif bgColor == "pink" %}linear-gradient(#F59E80, #F59E80){% else %}white{% endif %};
   }
 
   .sale-banner.{{ instance_id }} {
