--- a/templates/page.aio-first-page-flash.liquid
+++ b/templates/page.aio-first-page-flash.liquid
@@ -86,7 +86,7 @@ anymore
 health.
 ' | split: '|' %}
   {% render 'sale-banner', isFixed: true, desktopContent: "logo,ctaTitle", mobileContent: "logo,ctaTitle", bgColor: "pink", logoFileName: "logo-white-black-friday.png", ctaTitle: "UP TO 20%" %}
-  
+  {% render 'header-flash' %}
   {% render 'aio-first-page-hero-section' %}
   {% render 'partnerships-featured' %}
   {% render 'aio-first-page-meet-curalin', meetCuralins: meetCuralins %}
