--- a/snippets/sale-banner.liquid
+++ b/snippets/sale-banner.liquid
@@ -32,7 +32,7 @@
   </div>
 </div>
 <style>
-  .sale-banner .middle-flash-sale {
+   .middle-flash-sale {
       padding: 0 20px;
       z-index: 5;
       position: relative;
@@ -41,19 +41,23 @@
       justify-content: center;
   }
 
-  .sale-banner .middle-flash-sale .flash-sale-mobile {
+   .flash-sale-mobile {
       display: none;
   }
 
 
 
   @media screen and (max-width: 768px) {
-     .sale-banner .middle-flash-sale .flash-sale-desktop {
+      .flash-sale-desktop {
         display: none;
     }
 
-    .sale-banner .middle-flash-sale .flash-sale-mobile {
+     .flash-sale-mobile {
         display: block;
+    }
+
+     .part-60 {
+        width: 60%;
     }
   }
 </style>
