--- a/templates/page.aio-first-page-flash.liquid
+++ b/templates/page.aio-first-page-flash.liquid
@@ -85,8 +85,7 @@ anymore
 |lp-aio-sarah.png*Dr. Sarah Brewer:Functional doctor, diabetes expert, and author of over 60 books on personal
 health.
 ' | split: '|' %}
-  {% render 'sale-banner', isFixed: true, desktopContent: "logo,ctaTitle", mobileContent: "logo,ctaTitle", bgColor: "pink", logoFileName: "logo-white-black-friday.png", ctaTitle: "UP TO 20% OFF" %}
-  {% render 'header-flash' %}
+  {% render 'sale-banner', isFlash: true, isFixed: true, desktopContent: "logo,ctaTitle", mobileContent: "logo,ctaTitle", bgColor: "pink", logoFileName: "logo-white-black-friday.png", ctaTitle: "UP TO 20% OFF" %}
   {% render 'aio-first-page-hero-section' %}
   {% render 'partnerships-featured' %}
   {% render 'aio-first-page-meet-curalin', meetCuralins: meetCuralins %}
