--- a/snippets/sale-banner.liquid
+++ b/snippets/sale-banner.liquid
@@ -108,6 +108,7 @@
     .sale-banner.{{ instance_id }} img.logo {
       display: {% if mobileContent contains 'logo' %}block{% else %}none{% endif %};
       width: {% unless logoFileName contains 'white' %}100%{% endunless %};
+      max-width: {% if isFlash %} 150px {% endif %};
     }
 
     .sale-banner.{{ instance_id }} p.title {
