--- a/snippets/sale-banner.liquid
+++ b/snippets/sale-banner.liquid
@@ -187,7 +187,7 @@
 
   .sale-banner .percents-off {
     margin-right: 10px;
-    font-size: 35px;
+    font-size: {% if isFlash %}clamp(20px, 2vw, 35px) {% else %} 35px {% endif %};
     font-weight: bold;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
