--- a/snippets/aio-first-page-hero-section.liquid
+++ b/snippets/aio-first-page-hero-section.liquid
@@ -43,7 +43,7 @@
 
 
   #hero-section {
-    padding: unset;
+    padding: {% unless isFlash %} unset {% endunless %};
   }
  
   #hero-section:before {
@@ -227,7 +227,7 @@
     #hero-section {
       min-height: 125vw;
       overflow: visible;
-      padding-top: 5vw;
+      padding-top: {% if isFlash %}100px {% else %}5vw{% endif %};
     }
 
     #hero-section:before {
