--- a/snippets/sale-banner.liquid
+++ b/snippets/sale-banner.liquid
@@ -178,7 +178,7 @@
     align-items: center;
     font-family: 'PP Radio Grotesk';
     gap: 10px;
-    color: white;
+    color: {% unless isFlash %} white {% endunless %};
   }
 
   .sale-banner .up-to {
