--- a/snippets/sale-banner.liquid
+++ b/snippets/sale-banner.liquid
@@ -176,7 +176,7 @@
   .sale-banner .off-container {
     justify-content: center;
     align-items: center;
-    font-family:{% if isFlash %}'Montserrat'{% else %} 'PP Radio Grotesk' {% endif %};
+    font-family:'PP Radio Grotesk';
     gap: 10px;
     color: {% unless isFlash %} white {% endunless %};
   }
