--- a/snippets/sale-banner.liquid
+++ b/snippets/sale-banner.liquid
@@ -21,6 +21,18 @@
           <div class="up-to">UP TO</div>
           <div class="percents-off">20% OFF</div>
         </div>
+        {% elsif ctaTitle == "flash" %}
+          <div class="twenty-percent-off part-20">
+              <div class="up-to">
+                  UP TO
+              </div>
+              <div class="off"> 20% OFF</div>
+              <div class="twenty">20</div>
+              <div class="percent-off">
+                  <div class="percent">%</div>
+                  <div class="off-mobile">OFF</div>
+              </div>
+          </div>
       {% else %}
         <div class="off-container">
           <div class="percents-off">{{ ctaTitle }}</div>
@@ -31,6 +43,104 @@
     </div>
   </div>
 </div>
+<style>
+  .twenty-percent-off {
+      display: flex;
+  }
+
+  .up-to {
+      width: 25px;
+      height: 40px;
+      font-family: 'Montserrat';
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 20px;
+  }
+
+  .off {
+      margin-left: 10px;
+      width: 256px;
+      height: 40px;
+      font-family: 'Montserrat';
+      font-weight: 400;
+      font-size: 50px;
+      line-height: 20px;
+      display: flex;
+      align-items: center;
+
+  }
+
+  .twenty {
+      display: none;
+  }
+
+  .percent-off {
+      display: none;
+  }
+
+  @media screen and (max-width: 768px) {
+    .part-20 {
+        width: 20%;
+    }
+    .up-to {
+        margin-top: 10px;
+        width: 10px;
+        height: 11px;
+        font-weight: 400;
+        font-size: 5px;
+        line-height: 5px;
+    }
+
+    .off {
+        display: none;
+    }
+
+    .twenty-percent-off {
+        margin-right: 6vw;
+    }
+
+    .twenty {
+        display: flex;
+
+        width: 64px;
+        height: 47px;
+        font-family: 'Montserrat';
+        font-weight: 400;
+        font-size: 47.0432px;
+        line-height: 47px;
+
+    }
+
+    .percent-off {
+        display: flex;
+        flex-direction: column;
+        margin-left: -5px;
+    }
+
+    .percent {
+        width: 27px;
+        height: 45px;
+        margin-top: -10px;
+
+        font-family: 'Montserrat';
+
+        font-weight: 400;
+        font-size: 32px;
+        line-height: 61px;
+        color: #000000;
+    }
+
+    .off-mobile {
+        width: 22px;
+        height: 13px;
+        font-family: 'Montserrat';
+        font-weight: 400;
+        font-size: 10.4036px;
+        line-height: 13px;
+
+    }
+  }
+</style>
 <style>
    .middle-flash-sale {
       padding: 0 20px;
