--- a/snippets/partnerships-featured.liquid
+++ b/snippets/partnerships-featured.liquid
@@ -86,8 +86,8 @@
 
 
   .featured-section {
-      font-family: "Poppins", sans-serif;
-      padding:{% if isFlash %}160px 0 0 {% else %} 76px 0 0 {% endif %};
+    font-family: "Poppins", sans-serif;
+    padding: 76px 0 0;
   }
 
   .featured-section .sub-title {
