--- a/templates/page.aio-first-page-flash.liquid
+++ b/templates/page.aio-first-page-flash.liquid
@@ -86,7 +86,7 @@ anymore
 health.
 ' | split: '|' %}
   {% render 'sale-banner', isFlash: true, isFixed: true, desktopContent: "logo,ctaTitle", mobileContent: "logo,ctaTitle", bgColor: "pink", logoFileName: "logo-black-friday.svg", ctaTitle: "flash" %}
-  {% render 'aio-first-page-hero-section', isFlash: true %}
+  {% render 'aio-first-page-hero-section', isFlash: true, isLP: true %}
   {% render 'partnerships-featured', isLP: true %}
   {% render 'aio-first-page-meet-curalin', meetCuralins: meetCuralins %}
   {% render 'aio-first-page-life-changes' %}
